So far so good